updates to use actual jre instead of jlink