@@ -19,42 +19,28 @@
 
 FROM alpine:3.14 as jre-build
 
-ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
-
-RUN apk add --no-cache tzdata musl-locales musl-locales-lang \
-    && rm -rf /var/cache/apk/*
-
-ENV JAVA_VERSION jdk-11.0.13+8
-
-COPY OpenJDK-jdk.tar.gz /tmp/openjdk.tar.gz
+COPY OpenJDK-jre.tar.gz /tmp/openjre.tar.gz
 
 RUN set -eux; \
     mkdir -p /opt/java/openjdk; \
     tar --extract \
-       --file /tmp/openjdk.tar.gz \
+       --file /tmp/openjre.tar.gz \
        --directory /opt/java/openjdk \
        --strip-components 1 \
        --no-same-owner \
        ; \
-    rm -rf /tmp/openjdk.tar.gz;
-
-ENV PATH="/opt/java/openjdk/bin:$PATH"
-
-
-RUN jlink \
-      --add-modules java.base \
-      --strip-debug \
-      --no-man-pages \
-      --no-header-files \
-      --compress=2 \
-      --output /javaruntime
+    rm -rf /tmp/openjre.tar.gz;
 
 FROM alpine:3.14
 
-ENV JAVA_HOME=/opt/java/openjdk \
-    PATH="/opt/java/openjdk/bin:$PATH"
+ENV LANG="en_US.UTF-8" \
+    LANGUAGE="en_US:en" \
+    LC_ALL="en_US.UTF-8" \
+    JAVA_HOME="/opt/java/openjdk" \
+    PATH="/opt/java/openjdk/bin:$PATH" \
+    JAVA_VERSION="jdk-11.0.13+8"
 
-COPY --from=jre-build /javaruntime $JAVA_HOME
+COPY --from=jre-build /opt/java/openjdk $JAVA_HOME
 
 RUN echo Verifying install ... \
     && echo java --version && java --version \
